- (11/06/04) Adding the 'MSG' library.
- (14/07/04) Adapting to changes in 'FLW' library.
- (14/07/04) Adapting to changes in 'BSO' library.
- (14/07/04) Removing apparently unused read/write methods.
- (21/08/04) Obsoletes 'FAM' library, because not thread-safe.
- (10/10/04) Adding 'UIF' library.
- (23/10/04) Replacing 'Delete' with 'Remove' or 'Erase'.
- (27/10/04) Adapting to changes in 'TOL' lobrary.

AEM:
- (06/09/04) Adding 'Exists()' and 'IsEmpty()' to the static version.
- (05/10/04) Adding 'Previous/Next' with offset.

BCH:
- (09/06/04) Adding 'relations(_)' type.
- (07/09/04) Adding the truncate function with a position.
- (22/10/04) Renaming 'Delete' to 'Remove'.

BITBCH:
- (23/06/04) Adding the 'And', 'Or', 'XOr' and 'Not' functions.
- (23/06/04) Fixing some template problems.
- (07/07/04) Adding 'operator <<' function.
- (30/07/04) Fixing error preventing compiling under g++.
- (18/08/04) Optimization.

BSO:
- (12/03/04) Adding 'Convert()' function with 'String' parameter.
- (03/05/04) disable thread-unsafe functions when working in multithreading.
-			 fixing the 'Allocate' bug.
- (14/07/04) Removing the unused 'TXF' header.
- (11/08/04) Renaming some preprocessor definitions.
	
CCH:
- (20/05/04) Replacing the old 'Write', 'Fill' and 'Read' method.
- (25/09/04) Optimizing dumping ot the write cache.
- (09/10/04) Bug fixing.

CPE:
- (09/08/04) Introducing 'CPE_ST' to force single thread configuration even if the compiler is set to multithreading.
- (28/08/04) Adding Console/GUI detection (with wxWidgets).

CTN:
- Adding a 'FlushTest()' to '=' operator in debug mode.
- (23/04/04) Adding a test in debug mode to avoid retrieving of an undefined item.
- (10/05/04) Fixing 'Delete()' bug.
- (24/10/04) Removing 'EstVide', replaced by 'IsEmpty'.

DTE:
- (15/04/04) Introducing the new structure.
- (21/07/04) Improving some features about the thread-safeness of this library.
- (31/07/04) Adding the 'GetSimplifiedRawDate()' function.
- (09/08/04) Fixing sign bug.