@@ -15,7 +15,8 @@ GENERAL:
 - (21/08/04) Obsoletes 'FAM' library, because not thread-safe.
 - (10/10/04) Adding 'UIF' library.
 - (23/10/04) Replacing 'Delete' with 'Remove' or 'Erase'.
-- (27/10/04) Adapting to changes in 'TOL' lobrary.
+- (27/10/04) Adapting to changes in 'TOL' library.
+- (27/11/04) Adapting to changes in 'TOL' library.
 
 AEM:
 - (06/09/04) Adding 'Exists()' and 'IsEmpty()' to the static version.
@@ -162,6 +163,7 @@ TOL:
 - (28/08/04) No more use of the 'CIO' library when in GUI enviroment.
 - (29/09/04) Made it more thread-safe.
 - (27/10/04) The 'E_DISCLOSE_[_]' is replaced by 'E_RODISCLOSE_[_]' and 'E_RWDISCLOSE_[_]'
+- (27/11/04) Removing 'Free(...)', replaced with 'E_POINTER___'.
 
 TTR:
 - (23/05/04) Using 'CIO' library instead of 'STF'.
